--- a/test/performance/benchmarks/channel-pubsub/continuous/100-channel-perf-setup.yaml
+++ b/test/performance/benchmarks/channel-pubsub/continuous/100-channel-perf-setup.yaml
@@ -11,6 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -88,17 +89,6 @@ metadata:
 
 ---
 
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: perf-pubsub
-rules:
-  - apiGroups: [""]
-    resources: ["nodes", "pods"]
-    verbs: ["list"]
-
----
-
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -109,7 +99,7 @@ subjects:
     namespace: default
 roleRef:
   kind: ClusterRole
-  name: perf-pubsub
+  name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
 
 ---
